# crosslic

./: build.sh  readme.md  start.sh  start_wayland.sh
Crosslic_App/: Cargo.toml  config.crosslic.json
Crosslic_App/src/: commands.rs  main.rs
crosslic/: Cargo.toml
crosslic-macro/: Cargo.toml
crosslic-macro/src/: lib.rs
crosslic/src/: api.rs  lib.rs  server.rs  websocket.rs
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/lib/: api.ts
