[package]
name = "crosslic"
version = "0.1.0"
edition = "2024"
description = "Proc macro helpers for the Crosslic framework"
license = "MIT"

[dependencies]
# для макроса
crosslic-macro = { path = "../crosslic-macro" }

# для регистра команд
inventory = "0.3"

lazy_static = "1.4"
parking_lot = "0.11"
serde_json = "1.0"

# для WebSocket + HTTP
warp = "0.3"
futures-util = "0.3"

# для windowed UI
web-view = "0.7"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
include_dir = "0.7"                                                    # <-- новый
mime_guess = "2.0"
